# NCNU-Python-Programming-Language

week03/: s111213515_h3_c.py  s111213515_h5_a.py  s111213515_h5_b.py
week05/: s111213515_h1_sample.txt  s111213515_h2.py  s111213515_h3.py  s111213515_h4.py  s111213515_h5.py
week07/: s111213515_h2.py  s111213515_h4.py
week10/: pyproject.toml  s111213515_h1.py  temp-plot.html  twse_2603.csv
week14/: brickgame.py  pyproject.toml
week15/: main.py  pyproject.toml
week16/: main.py  news.txt  pyproject.toml
week3/: s111213515_h1.py  s111213515_h2.py  s111213515_h3_a.py  s111213515_h3_b.py  s111213515_h4.py  s111213515_h5_b.py  s111213515_h5_c.py  s111213515_h6.py
week4/: s111213515_h1.py  s111213515_h2.py  s111213515_h3.py
week5/: s111213515_h1.py  s111213515_h6.py
week7/: pyproject.toml  s111213515_h1.py  s111213515_h3.py  s111213515_h5.py
week9/: s111213515_h1.py  s111213515_h2.py
