[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Josh Hsieh", email = "jtr860830@gmail.com"},
]
dependencies = [
    "plotly>=5.11.0",
    "requests>=2.28.1",
    "pandas>=1.5.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
