[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Josh Hsieh", email = "jtr860830@gmail.com"},
]
dependencies = [
    "pygame>=2.1.2",
    "gtts>=2.3.0",
    "SpeechRecognition>=3.9.0",
    "googletrans>=3.0.0",
    "pyaudio>=0.2.13",
]
requires-python = ">=3.8"
license = {text = "MIT"}
