[project]
name = "w7"
version = "0.0.1"
description = ""
authors = [{ name = "Josh Hsieh", email = "jtr860830@gmail.com" }]
dependencies = ["opencv-python>=4.6.0.66", "numpy>=1.23.4"]
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pyright]
extraPaths = ["__pypackages__/3.10/lib/"]
